# UBendLossCoefficientAutoDetermenition

./: .gitignore  LICENSE  README.md  pyproject.toml
artifacts/gb_gsx/: estimation_info.csv
artifacts/gpr_gsx/: estimation_info.csv
artifacts/gpr_gsxy/: estimation_info.csv
artifacts/gpr_gsy/: estimation_info.csv
artifacts/gpr_qbc/: estimation_info.csv
artifacts/gpr_qbc_uncertainity/: estimation_info.csv
artifacts/gpr_random/: estimation_info.csv
artifacts/gpr_uncertainity/: estimation_info.csv
configs/: config.yaml
configs/data/: base.yaml  test.yaml
configs/models/: gpr_qbc.yaml  gpr_solo.yaml
configs/train/: gb_gsx.yaml  gpr_gsx.yaml  gpr_gsxy.yaml  gpr_gsy.yaml  gpr_qbc.yaml  gpr_qbc_uncertainity.yaml  gpr_random.yaml  gpr_uncertainity.yaml
docs/: .gitignore  design_doc.md  note.md
notebooks/: al_baseline.ipynb  base_models.ipynb  eda.ipynb  encoder_train.ipynb  gp_regr.ipynb  linear_regression.ipynb  modAl_learn.ipynb  nn_baseline.ipynb  pca.ipynb  vis.ipynb
src/scripts/: data_transforms.py
src/tests/: test_data_transforms.py
src/ubend_pl/: __init__.py  configs.py
src/ubend_pl/data/: make_dataset.py
src/ubend_pl/features/: build_features.py
src/ubend_pl/models/: model_list.py  train_gpr.py  train_gpr_qbc.py  train_gpr_uncertainity.py  train_nn.py  trainer.py
src/ubend_pl/scripts/: __init__.py  data_transforms.py  evaluate_model.py
src/ubend_pl/visualization/: visualize.py
